updated layout bugs

--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -1,6 +1,6 @@
 .hero {
     margin-top: 0;
-    padding: 120px 0 100px 0;
+    padding: 20px 0 100px 0;
     background-position: right;
     background-size: cover;
     background-repeat: no-repeat;
